--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3>
   <center>
   <p> I have always loved drawing and had a high interest of animation.
-     When I was younger I refused to watch anything but cartoons. This led me to start drawing my own characters and creating my own storys. Right now I am starting to shift twoards digital art.Even
+     When I was younger I refused to watch anything but cartoons. This led me to start drawing my own characters and creating my own storys. Right now I am starting to shift towards digital art.Even
    today drawing have been a huge part of my life and led me to my interest in coding. </p>
   </center>
   </h3>
