--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <h1>
   <nav>
   <a href ="#">Home</a>
-  <a href ="#">About</a>
-  <a href ="#">Blog</a>
+  <a href ="#">Coding Projects</a>
+  <a href ="#">Art</a>
   <a href ="#">Contact</a>
-  <a href ="#">Challenges</a>
+  <a href ="#">FAQ</a>
   </nav>
   </h1>
 
