--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    This is MisoMoon's website!
  </title>
  <h1 id="hello">
-   Hello! I'm Astrid!!
+   Hello I'm MisoMoon!
  </h1>
  <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
  <link rel="stylesheet" type="text/css" href="style.css">
