--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1>
   <nav>
   <a href ="#">Home</a>
-  <a href ="#">Coding Projects</a>
+  <a href ="projects.html">Coding Projects</a>
   <a href ="#">Art</a>
   <a href ="#">Contact</a>
   <a href ="#">FAQ</a>
