--- a/art.html
+++ b/art.html
@@ -4,7 +4,7 @@
 
   <head>
     <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
     </head>
     <h1>
     <nav>
@@ -16,17 +16,4 @@
     </nav>
     </h1>
     <body>
-<center>
-  <div>
-  <h1>
-    Coding Projects
-    </h1>
-    </div>
-    <div>
-      <h3 id="orderNote">
-        In order from most recent to old
-        </h3>
-      </div>
-
-      </body>
       </html>
