--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <h1>
   <nav>
-  <a href ="#">Home</a>
+  <a href ="index.html">Home</a>
   <a href ="projects.html">Coding Projects</a>
-  <a href ="#">Art</a>
-  <a href ="#">Contact</a>
-  <a href ="#">FAQ</a>
+  <a href ="art.html">Art</a>
+  <a href ="contact.html">Contact</a>
+  <a href ="faq.html">FAQ</a>
   </nav>
   </h1>
 
