--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <html>
 
   <head>
+    <link rel="icon" href="images/misoMoonn.png">
      <title>
    This is MisoMoon's website!
  </title>
- <h1 id="hello">
+ <h1>
    Hello I'm MisoMoon!
  </h1>
  <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <h1>
-  <nav>
-  <a href ="index.html">Home</a>
-  <a href ="projects.html">Coding Projects</a>
-  <a href ="art.html">Art</a>
-  <a href ="contact.html">Contact</a>
-  <a href ="faq.html">FAQ</a>
-  </nav>
+  <ul>
+  <li><a href ="index.html">Home</a></li>
+  <li><a href ="projects.html">Coding Projects</a></li>
+  <li><a href ="art.html">Art</a></li>
+  <li><a href ="contact.html">Contact</a></li>
+  <li><a href ="faq.html">FAQ</a></li>
   </h1>
-
+</ul>
   <body>
     <div>
       <h3>
@@ -89,8 +89,6 @@
     <img src="https://media.giphy.com/media/xUOwGpdpiRFW0WDOZa/giphy.gif"class="gif"/>
     <img src="https://media.giphy.com/media/K2R831kr4IXte/giphy.gif"class="gif"/>
     <img src="https://media.giphy.com/media/1EFliElPqLaV2/giphy.gif"class="gif"/>
-
-
     </center>
   </body>
 
