--- a/contact.html
+++ b/contact.html
@@ -3,20 +3,22 @@
 <html>
 
   <head>
+    <link rel="icon" href="images/misoMoonn.png">
     <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style2.css">
     </head>
     <h1>
-    <nav>
-    <a href ="index.html">Home</a>
-    <a href ="projects.html">Coding Projects</a>
-    <a href ="art.html">Art</a>
-    <a href ="contact.html">Contact</a>
-    <a href ="faq.html">FAQ</a>
-    </nav>
-    </h1>
+      <ul>
+      <li><a href ="index.html">Home</a></li>
+      <li><a href ="projects.html">Coding Projects</a></li>
+      <li><a href ="art.html">Art</a></li>
+      <li><a href ="contact.html">Contact</a></li>
+      <li><a href ="faq.html">FAQ</a></li>
+      </h1>
+    </ul>
     <div>
-  <input type="button" onclick="location.href='https://twitter.com/MisoMoonn';" value="Twitter" />
+  <input class="button" type="button" onclick="location.href='https://twitter.com/MisoMoonn';" value="Twitter"/>
+  <h2>This is my personal Twitter page. Its mostly filled with memes, sometimes I'll post a drawing or two</h2>
       </div>
     <body>
       </html>
