--- a/projects.html
+++ b/projects.html
@@ -3,18 +3,19 @@
 <html>
 
   <head>
+    <link rel="icon" href="images/misoMoonn.png">
     <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <h1>
-    <nav>
-    <a href ="index.html">Home</a>
-    <a href ="projects.html">Coding Projects</a>
-    <a href ="art.html">Art</a>
-    <a href ="contact.html">Contact</a>
-    <a href ="faq.html">FAQ</a>
-    </nav>
-    </h1>
+      <ul>
+      <li><a href ="index.html">Home</a></li>
+      <li><a href ="projects.html">Coding Projects</a></li>
+      <li><a href ="art.html">Art</a></li>
+      <li><a href ="contact.html">Contact</a></li>
+      <li><a href ="faq.html">FAQ</a></li>
+      </h1>
+    </ul>
     <body>
 <center>
   <div>
