--- a/art.html
+++ b/art.html
@@ -4,6 +4,9 @@
 
   <head>
     <link rel="icon" href="images/misoMoonn.png">
+    <h1 id="hello">
+      Hello I'm MisoMoon!
+    </h1>
     <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     </head>
