--- a/projects.html
+++ b/projects.html
@@ -4,15 +4,18 @@
 
   <head>
     <link rel="icon" href="images/misoMoonn.png">
+    <h1 id="hello">
+      Hello I'm MisoMoon!
+    </h1>33
     <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
     </head>
     <h1>
       <ul>
       <li><a href ="index.html">Home</a></li>
       <li><a href ="projects.html">Coding Projects</a></li>
       <li><a href ="art.html">Art</a></li>
-      <li><a href ="contact.html">Contact</a></li>
+      <li><a href ="contact.html">Social Media</a></li>
       <li><a href ="faq.html">FAQ</a></li>
       </h1>
     </ul>
@@ -28,6 +31,12 @@
         In order from most recent to old
         </h3>
       </div>
-
+<div class="allTheProjects">
+  <center>
+    <h2> Change Project</h2>
+     <img src="images/change.png"/>
+     <p>Wowie Change</p>
+  </center>
+  </div>
       </body>
       </html>
