--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       <li><a href ="index.html">Home</a></li>
       <li><a href ="projects.html">Coding Projects</a></li>
       <li><a href ="art.html">Art</a></li>
-      <li><a href ="contact.html">Contact</a></li>
+      <li><a class="active" href ="contact.html">Social Media</a></li>
       <li><a href ="faq.html">FAQ</a></li>
       </h1>
     </ul>
@@ -23,5 +23,13 @@
   <input class="button" type="button" onclick="location.href='https://twitter.com/MisoMoonn';" value="Twitter"/>
   <h2>This is my personal Twitter page. Its mostly filled with memes, sometimes I'll post a drawing or two</h2>
       </div>
+      <div>
+    <input class="button" type="button" onclick="location.href='https://picarto.tv/MisoMoon';" value="Picarto"/>
+    <h2>Picarto is where I stream my digital art. I stream on weekends at around 6pm(PDT) to 9pm(PDT)</h2>
+        </div>
+        <div>
+      <input class="button" type="button" onclick="location.href='https://www.twitch.tv/misomoonn';" value="Twitch"/>
+      <h2>I ocasionally stream video games. Streams are on weekdays at around 6pm(PDT) to 8pm(PDT)</h2>
+          </div>
     <body>
       </html>
