--- a/faq.html
+++ b/faq.html
@@ -18,8 +18,8 @@
     <li><a href ="index.html">Home</a></li>
     <li><a href ="projects.html">Coding Projects</a></li>
     <li><a href ="art.html">Art</a></li>
-    <li><a href ="contact.html">Contact</a></li>
-    <li><a href ="faq.html">FAQ</a></li>
+    <li><a href ="contact.html">Social Media</a></li>
+    <li><a class="active" href ="faq.html">FAQ</a></li>
     </h1>
     </ul>
 
@@ -29,7 +29,7 @@
   <center>
   <div class="frog">
     <h3> Q: "What drawing programs do you use?""<br>
-    A:Krita
+    A: Krita
   </h3>
   </div>
   <div class="frog">
