--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </head>
   <h1>
   <ul>
-  <li><a href ="index.html">Home</a></li>
+  <li><a class="active" href ="index.html">Home</a></li>
   <li><a href ="projects.html">Coding Projects</a></li>
   <li><a href ="art.html">Art</a></li>
-  <li><a href ="contact.html">Contact</a></li>
+  <li><a href ="contact.html">Social Media</a></li>
   <li><a href ="faq.html">FAQ</a></li>
   </h1>
 </ul>
