--- a/projects.html
+++ b/projects.html
@@ -6,14 +6,14 @@
     <link rel="icon" href="images/misoMoonn.png">
     <h1 id="hello">
       Hello I'm MisoMoon!
-    </h1>33
+    </h1>
     <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style2.css">
+    <link rel="stylesheet" type="text/css" href="style3.css">
     </head>
     <h1>
       <ul>
       <li><a href ="index.html">Home</a></li>
-      <li><a href ="projects.html">Coding Projects</a></li>
+      <li><a class="active" href ="projects.html">Coding Projects</a></li>
       <li><a href ="art.html">Art</a></li>
       <li><a href ="contact.html">Social Media</a></li>
       <li><a href ="faq.html">FAQ</a></li>
@@ -31,11 +31,19 @@
         In order from most recent to old
         </h3>
       </div>
+      <div class="allTheProjects">
+        <center>
+          <h2>Data Practice</h2>
+           <img src="images/data.png"/>
+           <p> This was my first practice with data. Whatever age the user put in, a list of things they could do would be repeated back to them. </p>
+        </center>
+        </div>
 <div class="allTheProjects">
   <center>
     <h2> Change Project</h2>
      <img src="images/change.png"/>
-     <p>Wowie Change</p>
+     <p>Change is a project in which we assigned variables, and used readline-sync to make a change machine.
+        This would ask for the ammount of pennies a user would have, and would return the amount of change they got. </p>
   </center>
   </div>
       </body>
