--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       Overwatch<br>
       Ukulele<br>
       Cosplay<br>
-      Ice Skating(Veiwing)<br>
+      Ice Skating(Viewing)<br>
       Anime<br>
       Video Games<br>
       Frogs<br>
