--- a/art.html
+++ b/art.html
@@ -8,7 +8,7 @@
       Hello I'm MisoMoon!
     </h1>
     <link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style4.css">
     </head>
     <h1>
       <ul>
@@ -21,5 +21,12 @@
     </ul>
     <body>
       <h2>This is a collection of both digital and traditional art<h2>
+        <div class="allTheProjects">
+          <center>
+            <h2>5/8/19</h2>
+             <img src="images/octaneDrawing.png"/>
+             <p>This is Octane from the game Apex Legends. This drawing took about 1 hour </p>
+          </center>
+          </div>
     </body>
       </html>
